kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muminst-server-rust
  namespace: default
  labels:
    app: muminst-server-rust
spec:
  ports:
  - name: http
    port: 8080 
    targetPort: 8080
  selector:
    app: muminst-server-rust
