kubernetes/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: muminst-server-rust
  namespace: default
spec:
  host: muminst-server-rust
  trafficPolicy:
    tls:
      mode: DISABLE
